# IP

./: README.md
LabWorks/: CMakeLists.txt  build.sh
LabWorks/Lab1/: CMakeLists.txt
LabWorks/Lab1/include/: Lab1.hpp
LabWorks/Lab1/src/: Lab1.cpp
LabWorks/main/: CMakeLists.txt  main.cpp
